--- a/2_second/exercicio_27/index.html
+++ b/2_second/exercicio_27/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preencher div 20x</title>
+    <title>Preencher div 5x com while</title>
 </head>
 <body>
 
@@ -16,8 +16,11 @@
             //div.innerHTML = "<p>Repetiçao</p>";
             let repeticao = "<p>Repeticao</p>"; 
 
-            for (let i = 0; i < 20; i++) {
+            let i = 0;
+
+            while (i < 5) {
                 div.innerHTML += repeticao;
+                i++
             }
         }
     </script>
