--- a/2_second/exercicio_29/index.html
+++ b/2_second/exercicio_29/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preencher div 20x</title>
+    <title>Imprimir numeros de 1 á 10</title>
 </head>
 <body>
 
@@ -13,11 +13,10 @@
         let div = document.getElementById('el');
 
         window.onload = () => {
-            //div.innerHTML = "<p>Repetiçao</p>";
-            let repeticao = "<p>Repeticao</p>"; 
+            //let repeticao = "<p>Repeticao</p>"; 
 
-            for (let i = 0; i < 20; i++) {
-                div.innerHTML += repeticao;
+            for (let i = 1; i <= 10; i++) {
+                div.innerHTML += "<p>"+ i +"</p>";
             }
         }
     </script>
