--- a/3_third/aula06.html
+++ b/3_third/aula06.html
@@ -20,6 +20,11 @@
         {
             console.log("idade vazia");
         }
+
+        // operadores ternarios
+        idade >= 18 
+        ? console.log("Maior de idade: ", idade) 
+        : console.log("Menor de idade: ", idade);
     </script>
 </body>
 </html>
