--- a/3_third/aula17.html
+++ b/3_third/aula17.html
@@ -7,17 +7,27 @@
 </head>
 <body>
     <script>
-        function main() {    
-            console.log("Inicio");
-
-            const promise = new Promise((resolve, reject) => {
+        const promise = () => new Promise((resolve, reject) => {
                 console.log("entou aqui");
-                setTimeout(() => resolve("funcionou"), 3000)
+                setTimeout(() => reject("Deu erro"), 3000)
                 //reject("deu erro")
             });
-            promise
-                .then(str => console.log("OK:", str))
-                .catch(error => console.log("ERROR:", error))
+ 
+        async function main() {
+            console.log("Inicio");
+
+            // promise
+            //     .then(str => console.log("OK:", str))
+            //     .catch(error => console.log("ERROR:", error))
+            
+            try {
+                const result = await promise()
+                console.log("OK", result);
+            } catch (error) {
+                console.log("ERROR:", error)
+            }
+            
+
             console.log("Fim");
     }
 
