Finishing with js

--- a/3_third/aula18.html
+++ b/3_third/aula18.html
@@ -6,6 +6,16 @@
     <title>DOM</title>
 </head>
 <body>
-    <script></script>
+    <script>
+        // Arvore DOM
+        // Window
+        // - Navegator
+        // - location
+        // - history
+        // - document
+        //  - html
+        //      - head
+        //      - dody
+    </script>
 </body>
 </html>
